--- a/client/src/base/stylesheet/TextInput.css
+++ b/client/src/base/stylesheet/TextInput.css
@@ -1,56 +1,72 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito&family=Quicksand&display=swap");
-.container-fluid .python-editor-container {
+.python-editor-container {
   padding: 0;
+  margin: 0 0 40px 0;
   border: none;
   border-radius: 7px;
-  outline: solid 1px #EBACE7;
+  outline: solid 1px #707070;
 }
 
-.container-fluid .python-editor-container .react-mde {
+.python-editor-container .react-mde {
   border: none;
 }
 
-.container-fluid .python-editor-container .react-mde .mde-header {
+.python-editor-container .react-mde .mde-header {
   padding: 10px;
   border: none;
   height: 75px;
 }
 
-.container-fluid .python-editor-container .react-mde .mde-header div {
+.python-editor-container .react-mde .mde-header div {
   border: none;
 }
 
-.container-fluid .python-editor-container .react-mde .mde-header .mde-tabs {
+.python-editor-container .react-mde .mde-header .mde-tabs {
   font-family: "Quicksand", sans-serif;
   font-weight: 400;
   font-size: 22px; /*change from pt to px*/
 }
 
-.container-fluid .python-editor-container .react-mde .mde-header .mde-tabs button.selected {
+.python-editor-container .react-mde .mde-header .mde-tabs button {
+  color: #707070;
+}
+
+.python-editor-container .react-mde .mde-header .mde-tabs button:hover {
+  color: black;
+}
+
+.python-editor-container .react-mde .mde-header .mde-tabs button.selected {
   color: black;
   background-color: white;
   border-color: #D9D9D9;
   border-radius: 7px;
   border-width: 2px;
+  color: #707070;
 }
 
-.container-fluid .python-editor-container .react-mde .mde-header .mde-tabs button.selected:hover {
-  border-color: #EBACE7;
+.python-editor-container .react-mde .mde-header .mde-tabs button.selected:hover {
   color: black;
 }
 
-.container-fluid .python-editor-container .react-mde .mde-header .mde-tabs button:hover {
-  color: #EBACE7;
+#root > div > div:nth-child(5) > div > div > div.text-input.row > div > div > div > div:nth-child(2) > div > textarea {
+  border-bottom: solid 1px #707070;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 400;
+  font-size: 22px; /*change from pt to px*/
+  color: #A7A7A7;
 }
 
-#root > div > div:nth-child(5) > div > div > div.python-editor-container.container-fluid > div > div:nth-child(2) > div > textarea {
-  border-top: solid 1px #EBACE7;
-  border-bottom: solid 1px #EBACE7;
-}
-
-.container-fluid .python-editor-container .image-tip {
+.python-editor-container .image-tip {
   border: none;
   border-radius: 7px;
+  height: 55px;
+  padding: 1rem;
+}
+
+.python-editor-container .image-tip .image-input {
+  font-family: "Nunito", sans-serif;
+  font-weight: 400;
+  font-size: 21px; /*change from pt to px*/
 }
 
 /*# sourceMappingURL=TextInput.css.map */
