--- a/client/src/pages/stylesheet/Answer.scss
+++ b/client/src/pages/stylesheet/Answer.scss
@@ -13,3 +13,7 @@
 #hint-button {
   float: right;
 }
+
+.answer-container .text-input .container-fluid .python-editor-container {
+  outline: solid 1px #D9D9D9;
+}
