--- a/client/src/pages/stylesheet/Replies.scss
+++ b/client/src/pages/stylesheet/Replies.scss
@@ -57,3 +57,47 @@
 .discussion .reply-button:hover {
   border: solid 1px #EBACE7;
 }
+
+.discussion .python-editor-container  {
+  padding: 0;
+  border: none;
+  border-radius: 7px;
+  outline: solid 1px #EBACE7;
+}
+
+.discussion .python-editor-container .react-mde {
+  border: none;
+}
+
+.discussion .python-editor-container .react-mde .mde-header {
+  padding:10px;
+  border: none;
+  height:75px;
+}
+.discussion .python-editor-container .react-mde .mde-header div {
+  border: none;
+}
+.discussion .python-editor-container .react-mde .mde-header .mde-tabs {
+  @include font-Quicksand($size: 22px);
+}
+.discussion .python-editor-container .react-mde .mde-header .mde-tabs button.selected {
+  @include button-color-radius( $border-color:#D9D9D9)
+}
+.discussion .python-editor-container .react-mde .mde-header .mde-tabs button.selected:hover {
+  border-color:  #EBACE7;
+  color:black
+}
+.discussion .python-editor-container .react-mde .mde-header .mde-tabs button:hover {
+  color: #EBACE7;
+}
+
+#root > div > div:nth-child(5) > div > div > div.python-editor-container.container-fluid > div > div:nth-child(2) > div > textarea {
+  border-bottom: solid 1px #EBACE7;
+  @include font-Quicksand($size: 22px);
+  color: #A7A7A7
+}
+
+.discussion .python-editor-container .image-tip {
+  border: none;
+  border-radius: 7px;
+}
