--- a/client/src/pages/stylesheet/Replies.scss
+++ b/client/src/pages/stylesheet/Replies.scss
@@ -8,7 +8,9 @@
   border-radius:9px;
   color: white;
   background-color: #EBACE7;
-  padding: 20px;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   height:110px
 }
 
