--- a/client/src/base/stylesheet/ListEntry.scss
+++ b/client/src/base/stylesheet/ListEntry.scss
@@ -63,3 +63,55 @@
   display: flex;
   height: auto;
 }
+
+
+div.answerEntry-vote.col {
+  margin-left: 80%;
+  vertical-align: center;
+  @include font-Quicksand($size: 20px, $weight: medium)
+}
+
+
+div.answerEntry-vote.col > a:nth-child(1) > img {
+  margin: 0 30px 0 0;
+}
+
+div.answerEntry-vote.col > div {
+  @include font-Quicksand($size: 20px, $weight: medium)
+}
+
+div.answerEntry-vote.col > a:nth-child(3) > img {
+  margin: 0 0 0 30px;
+}
+
+.answerEntry {
+  border: solid 1px #707070;
+  border-radius: 9px;
+  margin: 20px 0 20px 0;
+}
+.answerEntry .answerEntry-credential {
+  background-color: #E2F5F5;
+  justify-items: center;
+  align-items: center;
+  height: 3rem;
+  margin: 0;
+  padding: 5px;
+  border-radius: 9px;
+  @include font-Quicksand($size: 20px, $weight: medium)
+}
+
+.answerEntry .markdown-preview > p {
+  font-size: 1.5rem;
+  padding: 25px 15px 15px 15px;
+  @include font-Nunito($size: 20px);
+}
+
+.answerEntry .answerEntry-vote {
+  padding :10px;
+  justify-items: center;
+  align-items: center;
+}
+
+.answerEntry .reply-link {
+  margin: 0 15px 0 10px;
+}
