answer entry design update

--- a/client/src/base/stylesheet/ListEntry.css
+++ b/client/src/base/stylesheet/ListEntry.css
@@ -113,7 +113,8 @@ div.answerEntry-vote.col > a:nth-child(3) > img {
   height: 3rem;
   margin: 0;
   padding: 5px;
-  border-radius: 9px;
+  border-top-left-radius: 9px;
+  border-top-right-radius: 9px;
   font-family: "Quicksand", sans-serif;
   font-weight: medium;
   font-size: 20px; /*change from pt to px*/
@@ -135,6 +136,16 @@ div.answerEntry-vote.col > a:nth-child(3) > img {
 
 .answerEntry .reply-link {
   margin: 0 15px 0 10px;
+  color: black;
+  background-color: white;
+  border-color: #8AD5D8;
+  border-radius: 7px;
+  border-width: 2px;
+}
+
+.answerEntry .reply-link:hover {
+  background-color: #8AD5D8;
+  color: white;
 }
 
 /*# sourceMappingURL=ListEntry.css.map */
