--- a/client/src/base/stylesheet/ListEntry.scss
+++ b/client/src/base/stylesheet/ListEntry.scss
@@ -119,3 +119,8 @@ div.answerEntry-vote.col > a:nth-child(3) > img {
   background-color: #8ad5d8;
   color: white;
 }
+
+.answerEntry .answerEntry-credential .header-svg span {
+  background-color: #e2f5f5;
+  border-color: #e2f5f5;
+}
