--- a/client/src/pages/stylesheet/CoursesList.scss
+++ b/client/src/pages/stylesheet/CoursesList.scss
@@ -16,6 +16,10 @@
   @include font-Nunito($size: 22px, $weight: bold);
 }
 
+.courses-body .default-table-my-courses .course-entry:hover {
+  color: #2aebff;
+}
+
 .courses-body .default-table-all-courses .listTitle {
   border-color: #8ad5d8;
   color: #8ad5d8;
@@ -26,6 +30,10 @@
   color: #8ad5d8;
   text-decoration: none;
   @include font-Nunito($size: 22px, $weight: bold);
+}
+
+.courses-body .default-table-all-courses .course-entry:hover {
+  color: #2aebff;
 }
 
 .suggestion-card .list-suggestion-title {
