getMyQuestions, getMyComments, getMyReplies API

--- a/client/src/base/List.css
+++ b/client/src/base/List.css
@@ -9,7 +9,8 @@
   color: white;
 }
 
-.listQuestionsTitle {
+.listQuestionsTitle,
+.listMyCommentsTitle {
   margin-left: 20px;
   margin-bottom: 20px;
 }
