--- a/client/src/base/stylesheet/List.css
+++ b/client/src/base/stylesheet/List.css
@@ -15,7 +15,8 @@
   border-top-right-radius: 16px;
 }
 
-.listQuestionsTitle {
+.listQuestionsTitle,
+.listMyCommentsTitle {
   margin-left: 20px;
   margin-bottom: 20px;
 }
