--- a/client/src/pages/stylesheet/Home.css
+++ b/client/src/pages/stylesheet/Home.css
@@ -31,12 +31,7 @@
   color: #00983a;
 }
 
-.home-page-table
-  .default-table-new-questions-in-courses-enrolled
-  .list-body
-  > tr
-  > td
-  > .table-dot {
+.home-page-table .default-table-new-questions-in-courses-enrolled .list-body > tr > td > .table-dot {
   padding: 0;
   color: #00983a;
   height: 8px;
